--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 .navBar{
-    /* border: 1px solid #fff; */
+    
     display: flex;
     
 }
@@ -39,19 +39,13 @@
 
 .dayOfTheWeek img {
     background-color: #fff;
+    border-radius: 8px;
     color: black;
     padding-top: 10px;
-    margin-left: 45px;
+    margin-left: 35px;
     height:30px;
     width:20px;
 }
-/* #wednesday {
-    background-color: none;
-    border: none;
-    margin-bottom:10px;
-    position: relative;
-    bottom:20px;
-} */
 
 .time {
 
@@ -79,7 +73,6 @@
 
 
 .slackImage img{
-    /* filter: brightness(0.7); */
     border-radius: 50%;
     position:relative;
     bottom:110px;
@@ -87,10 +80,14 @@
    width:300px;
 }
 .githubLink {
+   
     position: relative;
     left:400px;
-    top:20px;
+    bottom:40px;
     
+}
+.githubLink a {
+    color:#73bcf0;
 }
 
 .weekDays {
@@ -119,5 +116,126 @@
     box-shadow: 2px 2px 2px 2px #aaa8a8;  
     cursor: pointer;
     transition: all ease-in-out;
+    
+}
+
+@media (max-width: 800px) {
+    .cont {
+        background-color: #000;
+        color:#fff;
+        height:600px;
+        width: 100%;
+    }
+    
+    .navBar{
+        
+        display: flex;
+        
+    }
+    .dayOfTheWeek {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        color: black;
+        display: flex;
+        margin-left: 20px;
+        margin-top:20px;
+        height:35px;
+        width:160px;
+    }
+    
+    .dayOfTheWeek div {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        font-size: 14px;
+        font-weight: 700;
+        padding:10px;
+    }
+    
+    .dayOfTheWeek img {
+        background-color: #fff;
+        color: black;
+        height:25px;
+        width:15px;
+        position: relative;
+        left:10px;
+
+    }
+
+    
+    .time {
+        background-color: #fff;
+        border-radius: 8px;
+        color:#000;
+        font-size: 14px;
+        margin-left: auto;
+        margin-top: 20px;
+        margin-right: 20px;
+        padding:10px 20px;
+        height:35px;
+        width:230px;
+       
+    }
+    
+    .nameTrackImage {
+        display:flex;
+        position:relative;
+        gap:10px;
+        left:180px;
+        top:200px;
+    }
+    
+    .nameTrack {
+        font-size: 13px;
+        position: relative;
+        bottom:40px;
+    }
+    
+    
+    
+    .slackImage img{
+        border-radius: 50%;
+        position:relative;
+        bottom:110px;
+       height: 200px;
+       width:200px;
+    }
+    .githubLink {
+        position: relative;
+        left:180px;
+        top:15px;
+        
+    }
+    
+    .weekDays {
+        background-color: #fff;
+        border-radius: 8px;
+        color: black;
+        display:none;
+        font-size: 14px;
+        font-weight: 700;
+        margin-left: 20px;
+        margin-top: 50px;
+        padding-left: 10px;
+        padding-top:10px;
+        height:200px;
+        width:150px;
+        position:relative;
+        bottom:585px;
+    }
+    
+    .weekDays div{
+        
+        margin-bottom: 10px;
+        width:85px; 
+    }
+    
+    .weekDays div :hover {
+        box-shadow: 2px 2px 2px 2px #aaa8a8;  
+        cursor: pointer;
+        transition: all ease-in-out;
+        
+    }
     
 }
