--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
     
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
     .cont {
         background-color: #000;
         color:#fff;
@@ -205,6 +205,122 @@
         position: relative;
         left:180px;
         top:15px;
+        
+    }
+    
+    .weekDays {
+        background-color: #fff;
+        border-radius: 8px;
+        color: black;
+        display:none;
+        font-size: 14px;
+        font-weight: 700;
+        margin-left: 20px;
+        margin-top: 50px;
+        padding-left: 10px;
+        padding-top:10px;
+        height:200px;
+        width:150px;
+        position:relative;
+        bottom:585px;
+    }
+    
+    .weekDays div{
+        
+        margin-bottom: 10px;
+        width:85px; 
+    }
+    
+    .weekDays div :hover {
+        box-shadow: 2px 2px 2px 2px #aaa8a8;  
+        cursor: pointer;
+        transition: all ease-in-out;
+        
+    }
+    
+}
+
+@media (max-width: 480px) {
+    .cont {
+        background-color: #000;
+        color:#fff;
+        height:600px;
+        width: 100%;
+    }
+    
+    .navBar{
+        
+        display: flex;
+        
+    }
+    .dayOfTheWeek {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        color: black;
+        display: flex;
+        margin-left: 20px;
+        margin-top:20px;
+        height:35px;
+        width:160px;
+    }
+    
+    .dayOfTheWeek div {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        font-size: 14px;
+        font-weight: 700;
+        padding:10px;
+    }
+    
+    .dayOfTheWeek img {
+        background-color: #fff;
+        color: black;
+        height:25px;
+        width:15px;
+        position: relative;
+        left:10px;
+
+    }
+
+    
+    .time {
+        background-color: #fff;
+        border-radius: 8px;
+        color:#000;
+        font-size: 14px;
+        margin-left: auto;
+        margin-top: 20px;
+        margin-right: 20px;
+        padding:10px 20px;
+        height:35px;
+        width:230px;
+       
+    }
+    
+  
+    .nameTrack {
+        font-size: 13px;
+        position: relative;
+        top:130px;
+        
+    }
+    
+    
+    
+    .slackImage img{
+        border-radius: 50%;
+        position:relative;
+        bottom:150px;
+        right:210px;
+       height: 270px;
+       width:270px;
+    }
+    .githubLink {
+        position: relative;
+        left:180px;
+        top:110px;
         
     }
     
