--- a/style.css
+++ b/style.css
@@ -355,3 +355,127 @@
     }
     
 }
+
+@media (min-width:350px) and (max-width:435px) {
+    .cont {
+        background-color: #000;
+        color:#fff;
+        height:600px;
+        width: 100%;
+    }
+    
+    .navBar{
+        
+        display: flex;
+        
+    }
+    .dayOfTheWeek {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        color: black;
+        display: flex;
+        margin-left: 10px;
+        margin-top:20px;
+        height:30px;
+        width:160px;
+    }
+    
+    .dayOfTheWeek div {
+        background-color: #fff;
+        border:none;
+        border-radius: 8px;
+        font-size: 14px;
+        font-weight: 700;
+        padding:5px;
+    }
+    
+    .dayOfTheWeek img {
+        background-color: #fff;
+        color: black;
+        height:20px;
+        width:15px;
+        position: relative;
+        left:30px;
+        bottom:1px;
+
+    }
+
+    
+    .time {
+        background-color: #fff;
+        border-radius: 8px;
+        color:#000;
+        font-size: 11px;
+        margin-left: auto;
+        margin-top: 20px;
+        margin-right: 5px;
+        padding:10px 10px;
+        height:30px;
+        width:170px;
+       
+    }
+    
+  
+    .nameTrack {
+        /* font-size: 10px; */
+        position: relative;
+        top:150px;
+        right:70px;
+        
+    }
+
+    .nameTrack h1 {
+        font-size: 18px;
+    }
+
+    .nameTrack h3 {
+        font-size: 10px;
+    }
+    
+    .slackImage img{
+        border-radius: 50%;
+        position:relative;
+        bottom:130px;
+        right:230px;
+       height: 250px;
+       width:250px;
+    }
+    .githubLink {
+        position: relative;
+        left:110px;
+        top:150px;
+        
+    }
+    
+    .weekDays {
+        background-color: #fff;
+        border-radius: 8px;
+        color: black;
+        display:none;
+        font-size: 14px;
+        font-weight: 700;
+        margin-left: 10px;
+        margin-top: 50px;
+        padding-left: 10px;
+        padding-top:10px;
+        height:200px;
+        width:120px;
+        position:relative;
+        bottom:585px;
+    }
+    
+    .weekDays div{
+        
+        margin-bottom: 10px;
+        width:75px; 
+    }
+    
+    .weekDays div :hover {
+        box-shadow: 2px 2px 2px 2px #aaa8a8;  
+        cursor: pointer;
+        transition: all ease-in-out;
+        
+    }
+    
+}
